# guess_and_check

./: README.md  pyproject.toml
src/guess_and_check/: __init__.py  __main__.py
